<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
  
  <PreferenceCategory
      android:title="@string/destination">

    <EditTextPreference
	android:key="hostname"
	android:title="@string/hostname"
	android:summary=""
	android:dialogTitle="@string/hostname"
	android:inputType="text"
	android:defaultValue="localhost" />
    
    <EditTextPreference
	android:key="username"
	android:title="@string/username"
	android:summary=""
	android:dialogTitle="@string/username"
	android:inputType="text"
	android:defaultValue="someone" />
    
    <EditTextPreference
	android:key="directory"
	android:title="@string/directory"
	android:summary=""
	android:dialogTitle="@string/directory"
	android:inputType="text"
	android:defaultValue="/home/someone" />
    
    <jp.ddo.masm11.esback.GenerateKeyPairPreference
	android:key="gen_keypair"
	android:title="@string/generate_key_pair"
	android:summary=""
	android:defaultValue="init"/>
    
  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/schedule">
    
    <jp.ddo.masm11.esback.TimePickerPreference
	android:key="start_time"
	android:title="@string/start_time"
	android:defaultValue="3:00"
	android:summary=""/>
    
    <EditTextPreference
	android:key="essid"
	android:title="@string/wifi_essid"
	android:summary=""
	android:dialogTitle="@string/wifi_essid"
	android:inputType="text"
	android:defaultValue="" />

    <jp.ddo.masm11.esback.BackupNowPreference
	android:key="backup_now"
        android:title="@string/backup_now"
	android:summary="@string/tap_here_to_backup_now"/>
    
  </PreferenceCategory>
  
  <PreferenceCategory
      android:key="dirs"
      android:title="@string/directories"/>

</PreferenceScreen>
